# cosi-coact-corpus-analysis-package

./: .gitignore  README.md  license.txt  pyproject.toml  requirements.txt
src/CoAct_corpus_analysis/: speaker_info.py  speaker_info_decoder.py  speaker_info_encoder.py  utterance_info.py
src/CoAct_corpus_analysis/CoAct_corpus_plotting/: FS_plotting.py  SA_plotting.py  plot_preprocessing.py
src/CoAct_question_analysis/: question_info.py  speaker_info.py  speaker_info_decoder.py  speaker_info_encoder.py
src/CoAct_question_analysis/CoAct_question_plotting/: FS_plotting.py  SA_plotting.py  plot_preprocessing.py
tests/: test_correct_output.json  test_decoder.py  test_extract_utterances.py  test_input.eaf  test_input.pfsx
tests/test_output/: 01_task1_A_data.json  01_task1_B_data.json
