[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CoAct_question_analysis"
version = "0.0.1"
authors = [
  { name="Michelle Kühn", email="michelle.kuehn@ru.nl" },
]
description = "Analysis of questions in the CoAct corpus"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

